--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-   <li> <a href="./pages/alfredo.html">Chicken Alfredo</a></li>
+   <li> <a href="./pages/chickenalfredo.html">Chicken Alfredo</a></li>
    <li> <p><a href="./pages/bbqribs.html">BBQ Ribs</a></p></li>
-   <li> <a href="./pages/Chickencasserol.html">Chicken Cassoral</a></li>
+   <li> <a href="./pages/Chickencasseroll.html">Chicken Cassoral</a></li>
    <li> <p><a href="./pages/nobakecookies.html">No Bake Cookies</a></p></li>
     </ul>
     <p>Hello world</p>
